@@ -19,6 +19,7 @@ SubVersion: $Id$
 	- [kevin] $2123: reset source ID when stopping the engine from engine_func (NO_GDB)
 	- [kevin] $2128: HW4 has 8 MB of FlashROM
 	- [kevin] $2130: complete HW4 images to 8 MB
+	- [kevin] $2136: fixed NULL dereference in filesel.c
 
 - 25/08/2005, version 2.80:
 	- [roms] $1689: fixed Titanium skin loading and fixed bug in skin loader
